# advent-of-code

./: .clang-format  .dir-locals.el  .gitignore  meson.build
2019/01/: part-1.cc  part-2.cc
2019/01/c++/: part-2.cc
2019/01/uml/: part-1.uml
2019/02/: part-1.cc  part-2.cc
2019/03/c++/: part-1.cc  part-2.cc
2019/04/c++/: part-1.cc  part-2.cc
2019/05/c++/: part-1.cc  part-2.cc
2019/06/c++/: part-1.cc
2019/07/c++/: part-1.cc  part-2.cc
2019/08/c++/: part-1.cc  part-2.cc
2019/09/c++/: part-1.cc  part-2.cc
2019/10/c++/: part-1.cc  part-2.cc
2019/11/c++/: part-1.cc  part-2.cc
2019/12/c++/: part-1.cc  part-2.cc
2019/13/c++/: part-1.cc  part-2.cc
2020/01/c++/: part-1.cc  part-2.cc
2020/01/forth/: part-1.fs
2020/02/c++/: part-1.cc  part-2.cc
2020/03/c++/: part-1.cc  part-2.cc
2020/04/c++/: part-1.cc  part-2.cc
2020/05/c++/: part-1.cc  part-2.cc
2020/06/c++/: part-1.cc  part-2.cc
2020/07/c++/: part-1.cc  part-2.cc
2020/08/c++/: part-1.cc  part-2.cc
2020/09/c++/: part-1.cc  part-2.cc  test
2020/10/c++/: part-1.cc  part-2.cc
2020/11/c++/: part-1.cc  part-2.cc
2020/12/c++/: part-1.cc  part-2.cc
2020/13/c++/: part-1.cc  part-2.cc
2020/17/: sample
gmsl/: __gmsl
include/aoc/: aoc.hpp  assert.hpp  base_includes.hpp  demangle.hpp  error.hpp  exception.hpp  forward.hpp  hash.hpp  input.hpp  line.hpp  matrix.hpp  meta.hpp  parse.hpp  point.hpp  regex.hpp  repr.hpp  string.hpp
make-utils/: .gitignore  make-utils.cc  make-utils.make
tests/: meson.build  test_parse.cc  test_string.cc
utils/: activate  template.cc
(+70 files in other folders)
